--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
     <title>Tus Abogados Ya</title>
-    <link rel="shortcut icon" href="../assets/images//tus abogados logo_Mesa de trabajo 1 copia 3.png" type="image/png"
+    <link rel="shortcut icon" href="./assets/images/tus abogados logo_Mesa de trabajo 1 copia 3.png" type="image/png"
         sizes="80x80">
     <meta name="title" content="Tus Abogados Ya">
     <meta name="description" content="Hola somos un estudio juridico especializados en Familia" />
@@ -82,7 +82,7 @@
                         <p>Te asesoramos y defendemos en todos los reclamos de Familia. Iniciá tu divorcio con nosotros
                             de forma online o de forma presencial en nuestras oficinas en CABA.</p>
                         <a href="#features" class="main-button-slider">Consultar</a>
-                        <a href="https://wa.me/XXXXXXXXXX" class="whatsapp-button" target="_blank">WhatsApp</a>
+                        <a href="https://wa.me/541166128576" class="whatsapp-button" target="_blank">WhatsApp</a>
                     </div>
                 </div>
             </div>
