--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">
+                        <a href="#welcome" class="logo">
                             <img src="assets/images/Diseño sin título (2).png" alt="Softy Pinko" />
                         </a>
 
