--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="#welcome" class="logo">
-                            <img src="assets/images/Diseño sin título (2).png" alt="Softy Pinko" />
+                            <img src="assets/images/logo_160x30_72.jpg" alt="Softy Pinko" />
                         </a>
 
                         <!-- ***** Logo End ***** -->
