--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
                                     Contacto:</h4>
 
                                 <p class="text-white">Puedes buscarnos vía correo electrónico, teléfono o whatsApp
-                                    para
-                                    ENVIAR LA DOCUMENTACIÓN.</p>
+                                    para enviar la documentación.
+                                    </p>
 
                                 <div class="icon-holder">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white"
@@ -303,7 +303,7 @@
                                     Entrevista:</h4>
 
                                 <p class="text-white">Esta puede llevarse a cabo de forma presencial o virtual.
-                                    PREPARA LOS DOCUMENTOS PARA INICIAR EL TRÁMITE</p>
+                                   Prepara los documentos para iniciar el trámite.</p>
 
                                 <div class="icon-holder">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
@@ -320,7 +320,7 @@
                                 <h4 class="text-white mb-3">Paso #3
                                     Plan a la medida:</h4>
 
-                                <p class="text-white">FIRMA DE LOS SOLICITANTE/S</p>
+                                <p class="text-white">Firma de los solicitante/s.</p>
 
                                 <div class="icon-holder">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
@@ -335,7 +335,7 @@
                                 <h4 class="text-white mb-3">Paso #4
                                     Tranquilidad</h4>
 
-                                <p class="text-white">DIVORCIO + INSCRIPCIÓN</p>
+                                <p class="text-white">Tu caso resuelto.</p>
 
                                 <div class="icon-holder">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white"
