--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </p>
                                 <div class="button-container">
                                     <a href="https://divorcios-caba.tusabogadosya.com.ar/"
-                                        class="custom-button" target="_blank">Contactanos</a>
+                                        class="custom-button" target="_blank">Ver más</a>
                                     <!-- Botón dentro del contenedor -->
                                 </div>
                             </div>
