--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <h2 class="section-title">Responsabilidades sobre los Alimentos para Hijos</h2>
                     </div>
                     <div class="left-text">
-                        <p>es importante comprender quiénes asumen la responsabilidad de los alimentos de los hijos
+                        <p>Es importante comprender quiénes asumen la responsabilidad de los alimentos de los hijos
                             según la ley. En este contexto, la normativa no especifica una división exacta de esta
                             obligación entre los progenitores. Esta distribución será determinada por el juez, quien
                             analizará detenidamente cada situación. Por lo tanto, no siempre corresponde que ambos
@@ -675,11 +675,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <h5 class="margin-bottom-30">Información</h5>
                     <div class="contact-text">
-                        <p>Constitución 1200, PB, Capital Federal
-                            Uruguay 485, piso 4º, Capital Federal
+                        <p>Constitución 1200, PB, Capital Federal.
+                    
 
                         </p>
-                        <p>telf: +5491141714101</p>
+                        <p>telf: +541166128576</p>
                         <p>Email: info@tusabogadosya.com.ar</p>
                     </div>
                 </div>
