--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h2 class="section-title">Responsabilidades sobre los Alimentos para Hijos</h2>
                     </div>
                     <div class="left-text" >
-                        <p style="text-align: justify;">Es importante comprender quiénes asumen la responsabilidad de los alimentos de los hijos
+                        <p style="text-align: justify;">&nbspEs importante comprender quiénes asumen la responsabilidad de los alimentos de los hijos
                             según la ley. En este contexto, la normativa no especifica una división exacta de esta
                             obligación entre los progenitores. Esta distribución será determinada por el juez, quien
                             analizará detenidamente cada situación. Por lo tanto, no siempre corresponde que ambos
@@ -251,7 +251,7 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">Implicaciones de la Obligación Alimentaria</h2>
+                        <h2 class="section-title">&nbspImplicaciones de la Obligación Alimentaria</h2>
                     </div>
                     <div class="left-text">
                         <p style="text-align: justify;">La obligación alimentaria implica mucho más que simplemente proporcionar alimentos. Se
