--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 align-self-center mobile-bottom-fix">
                     <div class="left-heading">
-                        <h2 class="section-title">&nbspImplicaciones de la Obligación Alimentaria</h2>
+                        <h2 class="section-title">Implicaciones de la Obligación Alimentaria</h2>
                     </div>
                     <div class="left-text">
-                        <p style="text-align: justify;">La obligación alimentaria implica mucho más que simplemente proporcionar alimentos. Se
+                        <p style="text-align: justify;">&nbsp La obligación alimentaria implica mucho más que simplemente proporcionar alimentos. Se
                             extiende a garantizar la satisfacción de diversas necesidades vitales de los hijos, que
                             incluyen la <strong> alimentación, la educación, el tiempo libre, la vestimenta, la vivienda, la
                             atención médica,</strong>
