--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     <i><img src="assets/images/comunicacion (1).png" alt=""
                                             style="width: 52px; height: 48px;"></i>
                                 </div>
-                                <h5 class="features-title">Regimén de comunicación</h5>
+                                <h5 class="features-title">Régimen de comunicación</h5>
                                 <p>-Cuidado personal de los hijos. <br> -Plan de parentalidad. <br>-Revinculación con
                                     los hijos.</p>
                                 <div class="button-container">
