--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                             style="width: 52px; height: 48px;"></i>
                                 </div>
                                 <h5 class="features-title">Cuota alimentaria</h5>
-                                <p>-Obtención de cuotas justas.<br>-Cuotas suplementarias por por inicio del ciclo
+                                <p>-Obtención de cuotas justas.<br>-Cuotas suplementarias por inicio del ciclo
                                     escolar.<br>-Tratamientos de salud.</p>
                                 <div class="button-container">
                                     <a href="https://wa.me/541166128576?text=Hola%2C%20quisiera%20saber%20m%C3%A1s%20sobre%20la%20Cuota%20Alimentaria
