--- a/index.html
+++ b/index.html
@@ -685,13 +685,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-12">
                     <h5 class="margin-bottom-30">Información</h5>
                     <div class="contact-text">
-                        <p>Constitución 1200, PB, Capital Federal.
-
-
-                        </p>
-                        <a href="+541166128576">telf: +541166128576</a>
+                        <p>Constitución 1200, PB, Capital Federal.</p>
+                        <a href="tel:+541166128576">telf: +5411 6612 8576</a>
                         <p>Email: info@tusabogadosya.com.ar</p>
                     </div>
+                    
                 </div>
                 <!-- ***** Contact Text End ***** -->
 
